[package]
name = "qbit-renamer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12.20", features = ["cookies", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
regex = "1.11.1"
thiserror = "2.0.12"